fix white space at top of nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,62 +4,45 @@ font-family: 'Fauna One', serif;
 */
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Fauna+One&display=swap');
 
-/*
-CSS Reset from https://www.joshwcomeau.com/css/custom-css-reset/
-  1. Use a more-intuitive box-sizing model.
-*/
-/* *, *::before, *::after {
+/* CSS Reset from https://www.joshwcomeau.com/css/custom-css-reset/
+  1. Use a more-intuitive box-sizing model. */
+*, *::before, *::after {
   box-sizing: border-box;
-} */
-/*
-  2. Remove default margin
-*/
-/* * {
+}
+/* 2. Remove default margin */
+* {
   margin: 0;
-} */
-/*
-  3. Allow percentage-based heights in the application
-*/
-/* html, body {
-  height: 100%; */
-/* } */
-/*
-  Typographic tweaks!
+}
+/* 3. Allow percentage-based heights in the application */
+html, body {
+  height: 100%;
+}
+/* Typographic tweaks!
   4. Add accessible line-height
-  5. Improve text rendering
-*/
-/* body {
+  5. Improve text rendering */
+body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
-/*
-  6. Improve media defaults
-*/
-/* img, picture, video, canvas, svg {
+/* 6. Improve media defaults */
+img, picture, video, canvas, svg {
   display: block;
   max-width: 100%;
-} */
-/*
-  7. Remove built-in form typography styles
-*/
-/* input, button, textarea, select {
+}
+/* 7. Remove built-in form typography styles */
+input, button, textarea, select {
   font: inherit;
-} */
-/*
-  8. Avoid text overflows
-*/
-/* p, h1, h2, h3, h4, h5, h6 {
+}
+/* 8. Avoid text overflows */
+p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
-} */
-/*
-  9. Create a root stacking context
-*/
-/* #root, #__next {
+}
+/* 9. Create a root stacking context */
+#root, #__next {
   isolation: isolate;
-}  */
+}
 
 /* global styles */
-
 h1, h2, h3, h4, h5, button {
     font-family: 'Cinzel', serif;
 }
@@ -96,7 +79,7 @@ header {
     margin-right: 10px;
 }
 
-/* Hamburger menu from https://www.youtube.com/watch?v=dAIVbLrAb_U*/
+/* Hamburger menu from https://www.youtube.com/watch?v=dAIVbLrAb_U */
 
 .x-menu {
   height: 10vh;
@@ -190,7 +173,7 @@ body {
 
 .sidebar {
   transition: translate var(--animation-timing);
-  translate: -100%;
+  translate: -110%;
   padding: 0.5rem 1rem;
   padding-top: calc(var(--hamburger-height) + var(--hamburger-margin) + 1rem);
   background-color: var(--foreground);
@@ -203,13 +186,12 @@ body {
   translate: 0;
 }
 
-
 /* Contact Form */
-/*
-Web Dev Simplified for color change
+
+/* Web Dev Simplified for color change
 https://www.youtube.com/watch?v=K6CWjkDgQnE */
 
-label:has(+ input:valid) { 
+label:has(+ input:valid):has(+ textarea:valid) { 
   color: green;
 }
 label:has(+ input:valid)::before {
